--- a/app/src/main/res/layout/activity_data_binding_lv.xml
+++ b/app/src/main/res/layout/activity_data_binding_lv.xml
@@ -22,6 +22,12 @@
             android:layout_height="wrap_content"
             android:text="getValue" />
 
+        <Button
+            android:id="@+id/setValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="setValue" />
+
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,5 +53,17 @@
             android:bindTag='@{"pwd"}'
             app:content="@{person.password}"
             app:itemTitles='@{"密码"}' />
+
+        <TextView
+            android:id="@+id/testTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@={person.accountNum}" />
+
+        <Button
+            android:id="@+id/pickPic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="pickPic" />
     </LinearLayout>
 </layout>
