--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.yuliyang.well_design.xformode.CircleImageTest
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
+    <!--<com.yuliyang.well_design.xformode.CircleImageTest-->
+    <!--android:layout_width="200dp"-->
+    <!--android:layout_height="200dp" />-->
+
+    <com.yuliyang.well_design.LoadingButton
+        android:id="@+id/loadingButton"
+        android:layout_width="100dp"
+        android:layout_height="50dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="收藏"
+            android:textColor="@android:color/white" />
+
+    </com.yuliyang.well_design.LoadingButton>
+
+    <Button
+        android:id="@+id/stopLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="stopLoading" />
+
+    <Button
+        android:id="@+id/clickTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="clickTest" />
 
 </LinearLayout>
